[package]
name = "coolprop-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "coolprop_gui_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cmake = "0.1"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
